--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
 		</div>
 
 		<!-- Lib -->
+		<script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<!-- Services -->
         <script src="common/services/Api.js"></script>
 		<!-- Directives -->
 		<script src="common/directives/menu.js"></script>
 		<script src="common/directives/timeline.js"></script>
         <script src="common/directives/onWheel.js"></script>
+		<!-- Filters -->
+		<script src="common/filters/index.js"></script>
 		<!-- Constants -->
         <script src="app/Constants.js"></script>
+		<!-- Animations -->
+		<script src="app/atelier/animations.js"></script>
         <!-- Controllers -->
 		<script src="app/home/home.js"></script>
 		<script src="app/atelier/atelier.js"></script>
