--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>La Feuille d'Or</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
-
+		<link href='bower_components/normalize.css/normalize.css' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet/less" href="styles/main.less">
 		<script src="bower_components/less.js/dist/less.js"></script>
 	</head>
@@ -39,7 +40,8 @@
 		<!-- Directives -->
 		<script src="common/directives/menu.js"></script>
 		<script src="common/directives/timeline.js"></script>
-        <script src="common/directives/onWheel.js"></script>
+		<script src="common/directives/onWheel.js"></script>
+        <script src="common/directives/fullFrame.js"></script>
 		<!-- Filters -->
 		<script src="common/filters/index.js"></script>
 		<!-- Constants -->
