--- a/app/savoirfaire/savoirfaire.html
+++ b/app/savoirfaire/savoirfaire.html
@@ -2,6 +2,5 @@
 
 </div>
 
-<div ui-view="info"></div>
 
-<div ui-view="visual"></div>
+<text-clip image-url="assets/images/IMG_9470.jpg" content="salut" text-size="200"></text-clip>
