--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 				<tab>en</tab>
 			</menu>
 
-			<div ui-view="main"></div>
+			<div class="mainView" ui-view="main"></div>
+			<div class="border top"></div>
+			<div class="border right"></div>
+			<div class="border bottom"></div>
+			<div class="border left"></div>
 		</div>
 
 		<!-- Lib -->
@@ -41,7 +45,8 @@
 		<script src="common/directives/menu.js"></script>
 		<script src="common/directives/timeline.js"></script>
 		<script src="common/directives/onWheel.js"></script>
-        <script src="common/directives/fullFrame.js"></script>
+		<script src="common/directives/fullFrame.js"></script>
+        <script src="common/directives/textClip.js"></script>
 		<!-- Filters -->
 		<script src="common/filters/index.js"></script>
 		<!-- Constants -->
