--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		</div>
 
 		<!-- Lib -->
+		<script src="bower_components/countUp.js/countUp.js"></script>
 		<script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
