--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<tab ui-sref="atelier">atelier</tab>
 				<tab ui-sref="savoirfaire">savoir-faire</tab>
 				<tab ui-sref="galerie">réalisations</tab>
-				<tab ui-sref="formation">formations / conférences</tab>
+				<tab ui-sref="formation">transmission du savoir</tab>
 				<tab ui-sref="contact">contact</tab>
 			</menu>
 
@@ -60,6 +60,7 @@
 		<script src="app/atelier/atelier.js"></script>
 		<script src="app/contact/contact.js"></script>
 		<script src="app/galerie/galerie.js"></script>
+		<script src="app/galerie/single/single.js"></script>
 		<script src="app/formation/formation.js"></script>
 		<script src="app/savoirfaire/savoirfaire.js"></script>
         <script src="app/app.js"></script>
