--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <script src="common/directives/gallery.js"></script>
 		<!-- Filters -->
 		<script src="common/filters/index.js"></script>
+		<script src="common/filters/slice.js"></script>
 		<!-- Constants -->
         <script src="app/Constants.js"></script>
 		<!-- Animations -->
