--- a/app/galerie/single/single.html
+++ b/app/galerie/single/single.html
@@ -1,1 +1,9 @@
-<h1 gallery-close-on-click>{{sgl.post.title}}</h1>
+<div id="singleContainer">
+    <div class="infos">
+        <h1 gallery-close-on-click>{{sgl.post.title}}</h1>
+        <p>{{sgl.post.desc}}</p>
+    </div>
+
+
+
+</div>
