--- a/app/galerie/single/single.html
+++ b/app/galerie/single/single.html
@@ -1,9 +1,13 @@
 <div id="singleContainer">
+
+
+    <slider pictures="sgl.post.pictures"></slider>
+
+
     <div class="infos">
-        <h1 gallery-close-on-click>{{sgl.post.title}}</h1>
+        <h1>{{sgl.post.title}}</h1>
         <p>{{sgl.post.desc}}</p>
     </div>
 
-
-
+    <nav ui-sref="galerie">Retour aux Réalisation</nav>
 </div>
