--- a/app/galerie/single/single.html
+++ b/app/galerie/single/single.html
@@ -6,8 +6,8 @@
 
     <div class="infos">
         <h1>{{sgl.post.title}}</h1>
-        <p>{{sgl.post.desc}}</p>
+        <p>{{sgl.post.description}}</p>
     </div>
 
-    <nav ui-sref="galerie">Retour aux Réalisation</nav>
+    <button class="back" ui-sref="galerie">Retour aux Réalisations</button>
 </div>
