--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 				 /
 				<tab>en</tab>
 			</menu>
-
+			<!-- Main View -->
 			<div class="mainView" ui-view="main"></div>
+
 			<div class="border top"></div>
 			<div class="border right"></div>
 			<div class="border bottom"></div>
@@ -49,7 +50,8 @@
 		<script src="common/directives/fullFrame.js"></script>
 		<script src="common/directives/textClip.js"></script>
 		<script src="common/directives/gallery.js"></script>
-        <script src="common/directives/slider.js"></script>
+		<script src="common/directives/slider.js"></script>
+        <script src="common/directives/arrows.js"></script>
 		<!-- Filters -->
 		<script src="common/filters/index.js"></script>
 		<script src="common/filters/slice.js"></script>
@@ -57,6 +59,7 @@
         <script src="app/Constants.js"></script>
 		<!-- Animations -->
 		<script src="app/atelier/animations.js"></script>
+		<script src="app/savoirfaire/animations.js"></script>
         <!-- Controllers -->
 		<script src="app/home/home.js"></script>
 		<script src="app/atelier/atelier.js"></script>
@@ -65,6 +68,7 @@
 		<script src="app/galerie/single/single.js"></script>
 		<script src="app/formation/formation.js"></script>
 		<script src="app/savoirfaire/savoirfaire.js"></script>
+		<script src="app/savoirfaire/savoir/savoir.js"></script>
         <script src="app/app.js"></script>
 	</body>
 </html>
