Add formation Inte

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,1 +1,31 @@
-<p>contact</p>
+<div id="contactContainer">
+
+    <header>
+        <h2>Besoin d'un renseignement ?</h2>
+        <div class="fioriture"></div>
+    </header>
+
+    <form>
+        <label for="name">Nom : </label>
+        <input type="text" name="name" />
+
+        <label for="mail">eMail : </label>
+        <input type="email" name="mail" />
+
+        <label for="subject">Sujet : </label>
+        <input type="text" name="subject" />
+
+        <label for="message">Message : </label>
+        <textarea name="message"></textarea>
+    </form>
+
+    <section class="informations">
+        <h1 class="name">Atelier la feuille d'or</h1>
+        <h2 class="address">7 rue de la Tour d'Auvergne, 75009 Paris</h2>
+        <h4>Téléphone : +33 1 42 82 17 36</h4>
+        <h4>Email : lafeuilledor@free.fr</h4>
+        <h4>Horaires : Du mardi au vendredi 9h30 / 12h30 - 14h / 18h</h4>
+        <h4>Métro : <i class="metro2">Anvers</i> <i class="metro7">Cadet</i> </h4>
+    </section>
+
+</div>
