--- a/app/savoirfaire/savoir/savoir.html
+++ b/app/savoirfaire/savoir/savoir.html
@@ -2,14 +2,14 @@
     id="savoirContainer"
     class="container"
 >
-<!-- 
+<!--
     <nav>
-        <arrow-right class="arrow right" data-color="#353535" ng-click="sf.next()"></arrow-right>
+        <arrow-right class="arrow right" ng-click="sf.next()"></arrow-right>
     </nav> -->
 
-    <section class="Details">
+    <section class="Details textureBg">
 
-        <arrow-left class="arrow left" data-color="#353535" ui-sref="savoirfaire"></arrow-left>
+        <arrow-left class="arrow left" ui-sref="savoirfaire"></arrow-left>
 
         <div class="Details-content">
             <h1>{{s.savoir.title}}</h1>
