--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 		<!-- Animations -->
 		<script src="app/atelier/animations.js"></script>
 		<script src="app/savoirfaire/animations.js"></script>
+		<script src="app/formation/animations.js"></script>
+		<script src="app/galerie/animations.js"></script>
         <!-- Controllers -->
 		<script src="app/home/home.js"></script>
 		<script src="app/atelier/atelier.js"></script>
@@ -67,6 +69,7 @@
 		<script src="app/galerie/galerie.js"></script>
 		<script src="app/galerie/single/single.js"></script>
 		<script src="app/formation/formation.js"></script>
+		<script src="app/formation/opened/opened.js"></script>
 		<script src="app/savoirfaire/savoirfaire.js"></script>
 		<script src="app/savoirfaire/savoir/savoir.js"></script>
         <script src="app/app.js"></script>
