--- a/app/formation/formation.html
+++ b/app/formation/formation.html
@@ -1,1 +1,50 @@
-<p>formations / conférences</p>
+<div
+    id="formationContainer"
+    class="container"
+>
+
+    <div class="background">
+        <img full-frame src="assets/images/carte.jpg" />
+    </div>
+
+    <div class="center" ui-sref="formation">
+        <header ng-class="{hidden: fc.detailsOpen}">
+            <h1>{{fc.headerTitle}}</h1>
+            <div class="fioriture"></div>
+        </header>
+
+        <div class="formationsConferences">
+            <section class="Formations"  ng-click="app.stopEventPropagation($event)">
+                <h2 class="Formations-title">Formations</h2>
+                <div class="Formations-list">
+                    <article
+                        class="Formations-list-item"
+                        ng-repeat="(index, formation) in fc.formations"
+                        ui-sref="formation.openedFormation({slug: formation.slug})"
+                    >
+                        <h4>{{formation.title}}</h4>
+                        <span>{{'0' + (index + 1)}}</span>
+                    </article>
+                </div>
+            </section>
+
+            <section class="Conferences" ng-click="app.stopEventPropagation($event)">
+                <h2 class="Conferences-title">Conférences</h2>
+                <div class="Conferences-list">
+                    <article
+                        class="Conferences-list-item"
+                        ng-repeat="(index, conference) in fc.conferences"
+                        ui-sref="formation.openedConference({slug: conference.slug})"
+                    >
+                        <span>{{'0' + (index + 1)}}</span>
+                        <h4>{{conference.title}}</h4>
+                    </article>
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="formationView" ui-view="formation"></div>
+    <div class="conferenceView" ui-view="conference"></div>
+
+</div>
