--- a/app/galerie/galerie.html
+++ b/app/galerie/galerie.html
@@ -1,6 +1,6 @@
 <div
     id="galerieContainer"
-    class="container"
+    class="container textureBg"
     data-on-wheel
     data-down="glr.down()"
     data-up="glr.up()"
