--- a/app/galerie/galerie.html
+++ b/app/galerie/galerie.html
@@ -28,7 +28,7 @@
             <div class="shadow"></div>
             <img full-frame ng-src="{{post.cover.sizes.medium}}" alt="post.title"/>
             <div class="hover">
-                <h2>{{post.title}}</h2>
+                <h2 ng-bind-html="post.title"></h2>
                 <p>{{post.description}}</p>
             </div>
         </div>
