--- a/app/savoirfaire/savoir/savoir.html
+++ b/app/savoirfaire/savoir/savoir.html
@@ -7,20 +7,17 @@
         <arrow-right class="arrow right" ng-click="sf.next()"></arrow-right>
     </nav> -->
 
-    <section class="Details textureBg">
-
-        <arrow-left class="arrow left" ui-sref="savoirfaire"></arrow-left>
-
-        <div class="Details-content">
-            <h1>{{s.savoir.title}}</h1>
-            <h2>{{s.savoir.baseline}}</h2>
-            <p>{{s.savoir.content}}</p>
-            <button class="Details-content-contact" ui-sref="contact">Contact</button>
-        </div>
-    </section>
-
     <section class="Picture">
         <img full-frame ng-src="{{s.savoir.image.sizes.large || 'assets/images/IMG_9470.jpg'}}" alt="" />
+    </section>
+
+    <section class="Details textureBg">
+        <div class="Details-content">
+            <h1 ng-bind-html="s.savoir.title"></h1>
+            <h2 ng-bind-html="s.savoir.baseline"></h2>
+            <p ng-bind-html="s.savoir.content"></p>
+            <button class="Details-content-contact" ui-sref="contact">Contact</button>
+        </div>
     </section>
 
 </div>
