--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
+		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 		<!-- Services -->
         <script src="common/services/Api.js"></script>
 		<!-- Directives -->
@@ -71,6 +72,7 @@
         <!-- Controllers -->
 		<script src="app/home/home.js"></script>
 		<script src="app/atelier/atelier.js"></script>
+		<script src="app/atelier/clients/clients.js"></script>
 		<script src="app/contact/contact.js"></script>
 		<script src="app/galerie/galerie.js"></script>
 		<script src="app/galerie/single/single.js"></script>
