integration page contact add metro and bus

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -39,7 +39,9 @@
         <h4>Horaires : <span>Du mardi au vendredi</span>
         </h4>
         <h4><span>9h30 / 12h30 - 14h / 18h<span></h4>
-        <h4>Métro : <span class="metro2">Anvers</span> <span class="metro7">Cadet</span> </h4>
+        <h4>Métro : <img src="./assets/images/metro2.png"><span class="metro2">Anvers</span></h4>
+        <h4><img src="./assets/images/metro7.png"> <span class="metro7">Cadet</span></h4>
+        <h4>Bus : <span>12 - 14 - 57</span></h4>
     </section>
 
 </div>
