--- a/app/atelier/atelier.html
+++ b/app/atelier/atelier.html
@@ -18,7 +18,7 @@
     ></timeline>
 
     <div
-        class="background"
+        class="slideBackground"
         ng-class="{
             active: atlr.current === index
         }"
