--- a/app/galerie/galerie.html
+++ b/app/galerie/galerie.html
@@ -1,6 +1,7 @@
 <div
     id="galerieContainer"
     class="container textureBg"
+    data-main-view-animation="none"
     data-on-wheel
     data-down="glr.down()"
     data-up="glr.up()"
