--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,1 +1,42 @@
-<p>home</p>
+<div id="homeContainer" class="container textureBg">
+
+    <div class="background">
+        <video full-frame preload="auto" autoplay="true" loop="loop"  muted="muted">
+    		<source src="assets/background.webm" type="video/webm">
+    	</video>
+    </div>
+
+    <main class="center">
+
+        <header>
+            <h1 class="stagger">{{ app.language === 'fr' ? 'Choisissez votre chapitre pour découvrir l\'histoire' : 'Choose your chapiter to discover the story' }}</h1>
+            <div class="fioriture stagger"></div>
+        </header>
+
+        <section class="Chapiter">
+
+            <article ui-sref="atelier" class="Chapiter-item left stagger">
+                <h2 class="Chapiter-item-title">l'Atelier</h2>
+                <span class="Chapiter-item-number">01</span>
+            </article>
+
+            <article ui-sref="savoirfaire" class="Chapiter-item right stagger">
+                <h2 class="Chapiter-item-title">Savoir-Faire</h2>
+                <span class="Chapiter-item-number">02</span>
+            </article>
+
+            <article ui-sref="galerie" class="Chapiter-item left stagger">
+                <h2 class="Chapiter-item-title">Réalisations</h2>
+                <span class="Chapiter-item-number">03</span>
+            </article>
+
+            <article ui-sref="formation" class="Chapiter-item right stagger">
+                <h2 class="Chapiter-item-title">Transmission du savoir</h2>
+                <span class="Chapiter-item-number">04</span>
+            </article>
+
+        </section>
+
+    </main>
+
+</div>
