--- a/app/savoirfaire/savoir/savoir.html
+++ b/app/savoirfaire/savoir/savoir.html
@@ -16,7 +16,7 @@
             <h1 ng-bind-html="s.savoir.title"></h1>
             <h2 ng-bind-html="s.savoir.baseline"></h2>
             <p ng-bind-html="s.savoir.content"></p>
-            <button class="Details-content-contact" ui-sref="contact">Contact</button>
+            <button class="Details-content-contact" ui-sref="galerie">Réalisations</button>
         </div>
     </section>
 
