--- a/app/atelier/clients/clients.html
+++ b/app/atelier/clients/clients.html
@@ -9,7 +9,7 @@
     <div class="clientsCenter">
         <header>
             <h1>{{ app.language === 'fr' ? 'Ils nous font confiance' : 'They trust us' }}</h1>
-            <div class="fioriture"></div>
+            <zigouigoui data-color="#e6dcd1"></zigouigoui>
         </header>
 
         <div class="Lists">
