--- a/app/formation/formation.html
+++ b/app/formation/formation.html
@@ -10,7 +10,7 @@
     <div class="center" ui-sref="formation">
         <header ng-class="{hidden: fc.detailsOpen}">
             <h1 class="stagger">{{ app.language === 'fr' ? 'Transmettre un savoir-faire à l\'international' : 'Transmit our expertise around the world' }}</h1>
-            <div class="fioriture stagger"></div>
+            <zigouigoui class="stagger" data-color="#e6dcd1"></zigouigoui>
         </header>
 
         <div class="formationsConferences">
