--- a/app/savoirfaire/savoirfaire.html
+++ b/app/savoirfaire/savoirfaire.html
@@ -9,7 +9,9 @@
     <div class="center" ui-sref="savoirfaire">
         <header ng-class="{hidden: sf.detailsOpen}">
             <h1 class="stagger">{{ app.language === 'fr' ? 'Découvrez le savoir-faire de La Feuille d\'Or' : 'Discover the expertise of La Feuille d\'Or' }}</h1>
-            <div class="fioriture stagger"></div>
+            <div class="">
+                <zigouigoui class="stagger" data-color="#e6dcd1"></zigouigoui>
+            </div>
         </header>
 
         <div class="Lists">
