--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -2,7 +2,7 @@
 
     <header>
         <h2 class="firstTitle stagger">{{ app.language === 'fr' ? 'Besoin d\'un renseignement ?' : 'Need more information?' }}</h2>
-        <div class="fioriture stagger"></div>
+        <zigouigoui class="stagger"></zigouigoui>
     </header>
 
     <form class="halfScreen stagger">
