fix wording contact

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -32,9 +32,9 @@
     </form>
 
     <section class="informations halfScreen stagger">
-        <h1 class="name">Atelier la feuille d'or</h1>
-        <h2 class="address">7, rue de la Tour d'Auvergne 75009 Paris</h2>
-        <h4>{{ app.language === 'fr' ? 'Téléphone' : 'Phone' }} : <span>+33 1 42 82 17 36</span></h4>
+        <h1 class="name">Atelier La Feuille d'Or</h1>
+        <h2 class="address"> 7, rue de la Tour d'Auvergne - 75009 Paris</h2>
+        <h4>{{ app.language === 'fr' ? 'Téléphone' : 'Phone' }} : <span>+33 (0)1 42 82 17 36</span></h4>
         <h4>Email : <span>lafeuilledor@free.fr</span></h4>
         <h4>{{ app.language === 'fr' ? 'Horaires' : 'Opening time' }} : <span>{{ app.language === 'fr' ? 'Du mardi au vendredi' : 'Tuesday to Friday' }}</span>
         </h4>
