--- a/app/home/home.html
+++ b/app/home/home.html
@@ -10,7 +10,7 @@
 
         <header>
             <h1 class="stagger">{{ app.language === 'fr' ? 'Choisissez votre chapitre pour découvrir l\'histoire' : 'Choose your chapiter to discover the story' }}</h1>
-            <zigouigoui class="stagger"></zigouigoui>
+            <zigouigoui class="stagger" data-color="#e6dcd1"></zigouigoui>
         </header>
 
         <section class="Chapiter">
