--- a/app/formation/opened/opened.html
+++ b/app/formation/opened/opened.html
@@ -10,7 +10,7 @@
 
     <section class="Details textureBg">
         <div class="Details-content">
-            <h1>{{post.title}}</h1>
+            <h1 ng-bind-html="post.title"></h1>
             <p><strong>Niveau : </strong>{{post.level}}</p>
             <p><strong>Durée : </strong>{{post.duree}}</p>
             <button ui-sref="contact">Contacter l'atelier</button>
