--- a/app/galerie/galerie.html
+++ b/app/galerie/galerie.html
@@ -31,7 +31,7 @@
             <div class="hover">
                 <div class="text">
                     <h2 ng-bind-html="post.title"></h2>
-                    <p>{{post.description}}</p>
+                    <p>{{post.baseline}}</p>
                 </div>
             </div>
         </div>
